--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://furuikeya.github.io/home-of-furi",
+  "homepage": "https://furuikeya.github.io/home-of-furi/",
   "name": "mywebsite",
   "version": "0.1.0",
   "private": true,
